welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:78: error: Unmatched closing brace '}' ignored here
}
^PictureMono2:83: error: eof expected but '}' found.
}
^